@@ -1,3 +1,8 @@
+2004-01-06  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add config.rpath.
+	* configure.ac (AC_OUTPUT): Add m4/Makefile.
+
 
 2003-12-17 23:46 Danny <danny_milo@yahoo.com>
 	Creation
